--- a/src/sections/about/About.css
+++ b/src/sections/about/About.css
@@ -88,7 +88,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
-    background: #2b2c43;
+    background: #2a2b44;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
@@ -219,7 +219,7 @@
 
 @media (max-width: 1440px) {
     .about-section {
-        padding: 6rem 10%;
+        padding: 4rem 10%;
     }
 }
 
@@ -242,9 +242,10 @@
 }
 
 @media (max-width: 768px) {
-    .about-content {
+    /*TODO cleanup possibly */
+    /* .about-content {
         padding: 5rem 5% 3rem;
-    }
+    } */
 
     .about-text h1 {
         font-size: 2.5rem;
